Fixes text alignment in footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,7 @@ main form input, main form label {
     color: inherit;
     font-family: ibm-bios, monospace, monospace;
     font-size:1.5em;
+    text-align: center;
 }
 
 ::selection {
